# GeneticAlgorithm

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in
app/: CMakeLists.txt  main.cpp
cmake/: buildGoogleTest.cmake
include/GeneticAlgorithm/: gene.h  geneticAlgorithm.h
include/Statistics/: sampling.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  gene_tests.cpp
